--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,5 +1,49 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Hello World!</h1>
+  {% if user.is_authenticated %}
+  
+  
+    <h1>Your records</h1>
+    </br>
+    {% if records %}
+      <table class="table table-hover table-sm table-bordered">
+        <thead class="table-dark">
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Country</th>
+            <th scope="col">City</th>
+            <th scope="col">Created At</th>
+            <th scope="col">ID</th>
+            <th scope="col">Edit</th>
+        </thead>
+        <tbody>
+          {% for record in records %}
+          <tr>
+            <td scope="row">{{ record.last_name }}, {{ record.first_name }}</td>
+            <td> {{ record.email }}</td>
+            <td> {{ record.phone }}</td>
+            <td> {{ record.country }}</td>
+            <td> {{ record.city }}</td>
+            <td> {{ record.created_at }}</td>
+            <td><a href="#">{{ record.id }}</a></td>
+            <td><a class="btn-secondary" href="#">Edit</a></td>
+          </tr>
+          {% endfor %}
+        </tbody>
+        
+      </table>
+      
+        
+      
+    {% endif %}
+  
+  {% else %}
+  
+  <div class='col-md-6 offset-md-3'>
+    <h1 class="display-6">Please login to view records</h1>
+  </div>
+  
+  {% endif %}
 {% endblock %}
