--- a/website/templates/website/login.html
+++ b/website/templates/website/login.html
@@ -4,7 +4,7 @@
 
   {% if user.is_authenticated %}
 
-    <h1>You're already logged in</h1>
+    <h1 class="display-6 mb-3">You're already logged in</h1>
 
   {% else %}
 
