--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,9 +2,12 @@
 
 {% block content %}
   {% if user.is_authenticated %}
-  
-  
     <h1>Your records</h1>
+    <div class="d-flex">
+      <a class="btn btn-primary" href="{% url 'add_record' %}">Add</a>
+      <a class="btn btn-primary" href="{% url 'add_record' %}">Edit</a>
+    </div>
+    
     </br>
     {% if records %}
       <table class="table table-hover table-sm table-bordered">
