--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -31,7 +31,7 @@
             <td> {{ record.city }}</td>
             <td> {{ record.created_at }}</td>
             <td><a href="{% url 'record' pk=record.id %}">{{ record.id }}</a></td>
-            <td><a class="btn-secondary" href="#">Edit</a></td>
+            <td><a class="btn-secondary" href="{% url 'update_record' pk=record.id %}">Edit</a></td>
           </tr>
           {% endfor %}
         </tbody>
