--- a/website/templates/website/update_record.html
+++ b/website/templates/website/update_record.html
@@ -1,18 +1,20 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
+  <h1>Update record</h1>
+
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title">Add Record</h3>
+            <h3 class="card-title">Update Record</h3>
           </div>
           <div class="card-body">
-            <form method="post" action="{% url 'add_record' %}">
+            <form method="post" action="{% url 'update_record' pk=id %}">
               {% csrf_token %}
               {{ form.as_p }}
-              <button type="submit" class="btn btn-primary">Add</button>
+              <button type="submit" class="btn btn-primary">Update</button>
             </form>
           </div>
         </div>
