--- a/website/templates/website/create_group.html
+++ b/website/templates/website/create_group.html
@@ -6,10 +6,10 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title">Add Contact</h3>
+            <h3 class="card-title">Add Group</h3>
           </div>
           <div class="card-body">
-            <form method="post" action="{% url 'add_record' %}">
+            <form method="post" action="{% url 'create_group' %}">
               {% csrf_token %}
               {{ form.as_p }}
               <button type="submit" class="btn btn-primary">Add</button>
