--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -3,12 +3,7 @@
 {% block content %}
   {% if user.is_authenticated %}
     <h1>Your records</h1>
-    <div class="d-flex">
-      <a class="btn btn-primary" href="{% url 'add_record' %}">Add</a>
-      <a class="btn btn-primary" href="{% url 'add_record' %}">Edit</a>
-    </div>
-    
-    </br>
+    <hr>
     {% if records %}
       <table class="table table-hover table-sm table-bordered">
         <thead class="table-dark">
@@ -37,7 +32,10 @@
         </tbody>
         
       </table>
-      
+    
+      <div class="d-flex">
+        <a class="btn btn-primary" href="{% url 'add_record' %}">Add a contact</a>
+      </div>
         
       
     {% endif %}
