--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -24,8 +24,8 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'create_group' %}">Create Group</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">View Groups</a></li>
-              <li><a class="dropdown-item" href="#">Manage Groups</a></li>
+              <li><a class="dropdown-item" href="{% url 'view_groups' %}">View Groups</a></li>
+              <li><a class="dropdown-item" href="{% url 'create_group' %}">Manage Groups</a></li>
             </ul>
           </li>
           <li class="nav-item">
